--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,20 +9,26 @@
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/style.css">
 
-  <title>Fil D'actualité</title>
+  <title>College transcript</title>
 </head>
 
 <body>
   <header class="inner">
     <h2><a href="/"><i class="fas fa-code"></i>
-        Fil D'actualité</a></h2>
+        College transcript</a></h2>
     <nav>
       <ul>
         <li>
-          <a href="/login">Login</a>
+          <a href="/login">Add student</a>
         </li>
         <li>
-          <a href="/register">Register</a>
+          <a href="/register">Sections</a>
+        </li>
+        <li>
+          <a href="/register">Departments</a>
+        </li>
+         <li>
+          <a href="/register">Courses</a>
         </li>
       </ul>
     </nav>
