--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,8 +7,16 @@
         <tr>
           <th scope="col">#</th>
           <th scope="col">Name</th>
+          <th scope="col">Class</th>
+          <th scope="col">Degree Program</th>
           <th scope="col">SSN</th>
-          <th scope="col">Created_at</th>
+          <th scope="col">Number</th>
+          <th scope="col">Phone number</th>
+          <th scope="col">Birthday</th>
+          <th scope="col">Sex</th>
+          <th scope="col">Current Address</th>
+          <th scope="col">Created at</th>
+          <th scope="col">Action</th>
         </tr>
       </thead>
       <tbody>
@@ -16,11 +24,22 @@
         <tr>
           <th scope="row">{{incremented @index}}</th>
           <td>{{ dataValues.name }}</td>
+          <td>{{ dataValues.class.dataValues.name }}</td>
+          <td>{{ dataValues.degree_program.dataValues.name }}</td>
           <td>{{ dataValues.ssn }}</td>
+          <td>{{ dataValues.number }}</td>
+          <td>{{ dataValues.phone_number }}</td>
+          <td>{{ dataValues.birthday }}</td>
+          <td>{{ dataValues.sex }}</td>
+          <td>{{ dataValues.current_address }}</td>
           <td>{{formatDate dataValues.created_at }}</td>
+          <td>
+            <a href="#" class="btn btn-info"><i class="fa fa-eye"></i></a>
+           <a href="#" class="btn btn-danger"><i class="fa fa-trash"></i></a>
+          </td>
         </tr>
         {{else}}
-        <p>No Message available</p>
+        <p>No student available</p>
         {{/each}}
       </tbody>
     </table>
