--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
     <nav>
       <ul>
         <li>
-          <a href="/login">Add student</a>
+          <a href="/students/create">Add student</a>
         </li>
         <li>
           <a href="/register">Sections</a>
