--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,10 @@
 <section id="gigs" class="container">
   <h1>All Students {{ students.length }}</h1>
-
+  {{#each errors}}
+  <div class="error">
+    <p><span class="badge badge-pill badge-danger">{{ text }}</span></p>
+  </div>
+  {{/each}}
   <div class="row">
     <table class="table">
       <thead class="thead-dark">
@@ -35,7 +39,10 @@
           <td>{{formatDate dataValues.created_at }}</td>
           <td>
             <a href="#" class="btn btn-info"><i class="fa fa-eye"></i></a>
-           <a href="#" class="btn btn-danger"><i class="fa fa-trash"></i></a>
+            <a onclick="deleteStudent({{ dataValues.id }})" class="btn btn-danger"><i class="fa fa-trash"></i></a>
+            <form id="delete-form-{{ dataValues.id }}" action="students/destroy/{{ dataValues.id }}" method="POST"
+              style="display: none;">
+            </form>
           </td>
         </tr>
         {{else}}
@@ -44,6 +51,24 @@
       </tbody>
     </table>
   </div>
-
-
 </section>
+
+<script>
+  function deleteStudent(id) {
+    swal({
+      title: "Are you sure?",
+      text: "Once deleted, you will not be able to recover this imaginary file!",
+      icon: "warning",
+      buttons: true,
+      dangerMode: true,
+    })
+      .then((willDelete) => {
+        if (willDelete) {
+          event.preventDefault();
+          document.getElementById('delete-form-' + id).submit();
+        } else {
+          swal("Your imaginary file is safe!");
+        }
+      });
+  }
+</script>
