--- a/views/student/create.handlebars
+++ b/views/student/create.handlebars
@@ -3,62 +3,77 @@
         <h1>Add student</h1>
         {{#each errors}}
         <div class="error">
-            <p>{{text}}</p>
+            <p><span class="badge badge-pill badge-danger">{{ text }}</span></p>
         </div>
         {{/each}}
         <div>
-            <form>
+            <form action="/students/store" method="POST">
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputEmail4">Name</label>
-                        <input type="email" class="form-control" id="inputEmail4" placeholder="Full Name">
+                        <input type="text" class="form-control" name="name" id="inputEmail4" placeholder="Full Name"
+                            required="required">
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="inputPassword4">SSN</label>
-                        <input type="password" class="form-control" id="inputPassword4" placeholder="SSN">
+                        <label for="input">SSN</label>
+                        <input type="text" class="form-control" name="ssn" id="input" placeholder="SSN"
+                            required="required">
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputEmail4">Number</label>
-                        <input type="email" class="form-control" id="inputEmail4" placeholder="Number">
+                        <input type="number" class="form-control" name="number" id="inputEmail4" placeholder="Number"
+                            required="required">
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="inputPassword4">Phone Number</label>
-                        <input type="password" class="form-control" id="inputPassword4" placeholder="Phone Number">
+                        <label for="input">Phone Number</label>
+                        <input type="number" class="form-control" name="phone_number" id="input"
+                            placeholder="Phone Number" required="required">
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputEmail4">Birthday</label>
-                        <input type="date" class="form-control" id="inputEmail4" placeholder="Birthday">
+                        <input type="date" class="form-control" name="birthday" id="inputEmail4" placeholder="Birthday"
+                            required="required">
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="inputPassword4">Sex</label>
-                        <input type="password" class="form-control" id="inputPassword4" placeholder="Sex">
+                        <label for="input">Sex</label>
+                        <select id="inputState" name="sex" class="form-control" required="required">
+                            <option value="M">Male</option>
+                            <option value="F">Female</option>
+                        </select>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputEmail4">Major Department</label>
-                        <input type="date" class="form-control" id="inputEmail4" placeholder="Major Department">
+                        <input type="text" class="form-control" name="major_department" id="inputEmail4"
+                            placeholder="Major Department" required="required">
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="inputPassword4">Minor Department</label>
-                        <input type="password" class="form-control" id="inputPassword4" placeholder="Minor Department">
+                        <label for="input">Minor Department</label>
+                        <input type="text" class="form-control" name="minor_department" id="input"
+                            placeholder="Minor Department" required="required">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputAddress">Current Address</label>
-                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                    <input type="text" class="form-control" name="current_address" id="inputAddress"
+                        placeholder="1234 Main St" required="required">
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputCity">Class</label>
-                        <select id="inputState" class="form-control">
-                            <option selected>Choose...</option>
-                            <option>...</option>
+                        <select id="inputState" name="classe" class="form-control" required="required">
+                            <option selected>Select a class</option>
+                            {{#each classes}}
+                            <option value="{{ dataValues.id }}">{{ dataValues.name }}</option>
+                            {{/each}}
                         </select>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputState">Degree program</label>
-                        <select id="inputState" class="form-control">
-                            <option selected>Choose...</option>
-                            <option>...</option>
+                        <select id="inputState" name="degree_program" class="form-control" required="required">
+                            <option selected>Select a degree program</option>
+                            {{#each degree_programs}}
+                            <option value="{{ dataValues.id }}">{{ dataValues.name }}</option>
+                            {{/each}}
                         </select>
                     </div>
                 </div>
@@ -67,3 +82,4 @@
         </div>
     </div>
 </section>
+
