--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -57,7 +57,7 @@
   function deleteStudent(id) {
     swal({
       title: "Are you sure?",
-      text: "Once deleted, you will not be able to recover this imaginary file!",
+      text: "Once deleted, you will not be able to recover this information!",
       icon: "warning",
       buttons: true,
       dangerMode: true,
@@ -67,7 +67,7 @@
           event.preventDefault();
           document.getElementById('delete-form-' + id).submit();
         } else {
-          swal("Your imaginary file is safe!");
+          swal("Your informattion is safe!");
         }
       });
   }
