fx-redirect-home

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,9 +10,7 @@
   <link rel="stylesheet" href="/css/app.css">
   <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/style.css">
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-
-
+  <script src="/js/sweetalert.min.js"></script>
 
   <title>College transcript</title>
 </head>
