ft-menu-section

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
           <a href="/students/create">Add student</a>
         </li>
         <li>
-          <a href="/register">Sections</a>
+          <a href="/sections/all">Sections</a>
         </li>
         <li>
           <a href="/register">Departments</a>
