ft-menu-department

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
           <a href="/sections/all">Sections</a>
         </li>
         <li>
-          <a href="/register">Departments</a>
+          <a href="/departments/all">Departments</a>
         </li>
         <li>
           <a href="/register">Courses</a>
