--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
       <ul>
         <li>
           <a href="/students/create">Add student</a>
-        </li>
+        </li> 
         <li>
           <a href="/sections/all">Sections</a>
         </li>
@@ -31,7 +31,7 @@
           <a href="/departments/all">Departments</a>
         </li>
         <li>
-          <a href="/register">Courses</a>
+          <a href="/courses/all">Courses</a>
         </li>
       </ul>
     </nav>
