--- a/public/css/style.css
+++ b/public/css/style.css
@@ -417,3 +417,9 @@ label {
   font-weight: 600;
   color: #0062cc;
 }
+
+.transcript-title{
+  border-bottom: 2px solid #000;
+  margin: 20px 300px 10px 300px;
+  padding-bottom: 15px;
+}
