--- a/views/student/show.handlebars
+++ b/views/student/show.handlebars
@@ -31,10 +31,19 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="profile-work">
-                    <p>Courses</p>
-                    <a href="">Website Link</a><br />
-                    <a href="">Bootsnipp Profile</a><br />
-                    <a href="">Bootply Profile</a>
+                    <h5><i class="fa fa-arrows"></i> Section</h5>
+                    <a href="">Semester: {{ student.dataValues.grade_report.dataValues.section.dataValues.semester}}</a><br />
+                    <a href="">Year: {{ student.dataValues.grade_report.dataValues.section.dataValues.year}}</a><br />
+                    <a href="">Number: {{ student.dataValues.grade_report.dataValues.section.dataValues.number}}</a><br />
+                    <a href="">Room Number: {{ student.dataValues.grade_report.dataValues.section.dataValues.room_number}}</a><br />
+                    <a href="">Building: {{ student.dataValues.grade_report.dataValues.section.dataValues.building}}</a><br />  
+                </div>
+                 <div class="profile-work">
+                    <h5><i class="fa fa-arrows"></i> Courses</h5>
+                    {{#each student.dataValues.grade_report.dataValues.section.dataValues.courses }}
+                       <a href="">{{ dataValues.name}}</a><br />
+                     {{/each}}
+            
                 </div>
             </div>
             <div class="col-md-8" style="margin-top: -10em;">
@@ -138,6 +147,19 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-center">
+                <h2 class="center transcript-title">Transcript Report</h2>
+                {{#if student.dataValues.grade_report}}
+                    <div class="container">
+                    <h4>Letter Grade</h4>
+                    <p>{{student.dataValues.grade_report.dataValues.letter_grade}}</p>
+                    <h4>Numeric Grade</h4>
+                    <p>{{student.dataValues.grade_report.dataValues.numeric_grade}}</p>
+                </div>
+                {{/if }}
             </div>
         </div>
     </form>
